1. Fix a fair bit of wiki content potentially being cropped out

--- a/css/style.css
+++ b/css/style.css
@@ -449,14 +449,22 @@ h4.release-date {
 
 html:has(.wiki-index-html),
 .wiki-index-html {
-  max-height: 100vh;
+  width: 100%; height: 100%;
 }
 .wiki-index-html nav {
   background-color: #F8F8F7;
   text-align: center;
 }
-.wiki-index-html main {
-  overflow: hidden;
+.wiki-index-html main > iframe {
+  display: block;
+}
+#wiki-try-reloading {
+  position: fixed;
+  text-align: center; vertical-align: middle;
+  top: 50%; left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+  color: #555; opacity: 0.8;
 }
 
 #builds {
